<resources>
    <string name="app_name">My Application</string>
    <string name="thename">Pillminder</string>
    <string name="viewallmedicine">View and Edit medicines</string>
    <string name="profiles">Profiles</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="version">Version 1.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="cancel">Cancel</string>
    <string name="save">save</string>
    <string name="age">Age :</string>
    <string name="name">Name :</string>
    <string name="update_your_profile_details">Update your profile details.</string>
    <string name="blood_group">Blood group :</string>
    <string name="weight_kg">Weight (kg) :</string>
    <string name="height_cm">Height (cm) :</string>
    <string name="notes">Notes :</string>
    <string name="cancelS">Cancel</string>
    <string name="update">Update</string>
    <string name="addedOn">Added on : </string>
    <string-array name="typespinnertext">
        <item>Tablet</item>
        <item>Capsule</item>
        <item>Liquid</item>
        <item>Gel</item>
        <item>Injection</item>
        <item>Add-water powder</item>
    </string-array>

    <string-array name="dosespinnertext">
        <item>pills</item>
        <item>teaspoons</item>
        <item>millileters</item>
        <item>other</item>
    </string-array>

    <string-array name="alrttypespinnertext">
        <item>Vibrate with tone</item>
        <item>Vibrate with ring</item>
        <item>Vibrate only</item>
        <item>Lights only</item>
    </string-array>

    <string-array name="tonespinnertext">
        <item>Default tone</item>
        <item>Select a tone</item>
        <item>Select a song</item>
    </string-array>

    <string-array name="notifyspinnertext">
        <item>Default tone</item>
        <item>Select a tone</item>
    </string-array>
    <string name="removeMedicinetext">Do you want remove this medicine from today list?</string>
    <string name="deletemedicinetext">All the data and records of this medicine will be removed permanently from the app.Do you want to continue?</string>
</resources>
